🤙 REFACTOR: update projects data, text alignment & fix css selector

--- a/src/views/Home/Sections/RecentProjectsSection/recent-project-section.scss
+++ b/src/views/Home/Sections/RecentProjectsSection/recent-project-section.scss
@@ -1,5 +1,5 @@
 .recent-projects-section {
-  section-wrapper {
+  .section-wrapper {
     display: flex;
     align-items: center;
     justify-content: center;
